[gd_scene load_steps=5 format=3 uid="uid://1wd7qbioc1h5"]

[ext_resource type="Script" path="res://src/levels/level 1/level_1.gd" id="1_nakhy"]
[ext_resource type="Script" path="res://src/enemies/timed attacker/global enemies/global bullet spawner/parallal/global_bullet_spawner_parallal_direction.gd" id="3_tmrlw"]
[ext_resource type="PackedScene" uid="uid://bi8ccuhy8gxha" path="res://src/enemies/timed attacker/towers/parallal tower/parallal_tower.tscn" id="4_ldb0h"]
[ext_resource type="Script" path="res://src/enemies/timed attacker/global enemies/global bullet spawner/global_bullet_spawner.gd" id="5_gx7xm"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_nakhy")
easy_time = 10
normal_time = 20
hard_time = 25
level_number = 1

[node name="ParallalTower" parent="." instance=ExtResource("4_ldb0h")]
disabled = true
speed = 300.0
frequency = 1.5

[node name="GlobalBulletSpawnerParallalDirection" type="Node2D" parent="."]
script = ExtResource("3_tmrlw")
speed = 300.0
frequency = 0.25

[node name="GlobalBulletSpawner" type="Node2D" parent="."]
script = ExtResource("5_gx7xm")
speed = 450.0
frequency = 0.5
disabled = true
